multi-tenancy/k8s-namespace-isolation-with-resource-quotas/netpol-deny-alpha.yaml
# netpol-deny-alpha.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: team-alpha
spec:
  podSelector: {}        # applies to ALL pods in this namespace
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {}    # only allow from pods IN THE SAME namespace
  egress:
  - to:
    - podSelector: {}    # only allow to pods IN THE SAME namespace
  - ports:               # allow DNS resolution (otherwise nothing works)
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
